# Sigla-Agent

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
agents/: __init__.py  configuration_analysis_agent.py  data_chat_agent.py
apps/pandas-data-analyst-app/: Plan wdrożenia:.yaml.yml  README.md  app.py  requirements.txt  sample.env  sample_config.txt  sample_config.yaml  sample_config_new.yaml  sample_config_polish.yaml
data/: sigla_data.csv
deployment/: requirements.txt
logs/: data_cleaner.py  data_visualization.py  data_wrangler.py
