[project]
name = "sigla-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-data-science-team>=0.0.0.9015",
    "anthropic>=0.49.0",
    "asyncio>=3.4.3",
    "ipython>=9.0.2",
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.22",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
    "xgboost>=3.0.0",
    "ydata-profiling",
]
